Fixed height of ul so it doesn't overlap input

--- a/dashboard_app/src/App.css
+++ b/dashboard_app/src/App.css
@@ -25,7 +25,7 @@
 .terminalList {
   word-wrap: break-word;
   overflow: scroll;
-  max-height: 200px;
+  max-height: 199px;
   height: auto;
   background-color: black;
   color: white;
